show search results.

--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
           </div>
         </div>
         <div class="col-md-7">
+          <div class="card my-4" id="task-result">
+            <div class="card-body">
+              <ul id="container"></ul>
+            </div>
+          </div>
           <table class="table table-dark table-striped">
             <thead>
               <th>Id</th>
