--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <div class="card">
             <div class="card-body">
               <form id="task-form">
+                <input type="hidden" id="task-id" />
                 <div class="mb-3">
                   <label for="name" class="form-label">Task Name</label>
                   <input
